# watsoap

./: .gitignore  404.html  README.md  app.py  config.yml  index.html  mkdocs.yml  pyproject.toml  run.sh  sitemap.xml
.github/workflows/: codeql-analysis.yml  main-workflow.yml
config/: .env.dummy  config.yml  requests.yml  requests_data.yml
docs/: index.md
search/: search_index.json
watsoap/: auth.py  headers.py  main.py  params.py  payload.py  report.py  rest_api.py
watsoap/config/: request.yml
