[tool.poetry]
name = "watsoap"
version = "0.1.0"
description = "WATSOAP (What's The Status Of API) is a API health-checking monitoring tool"
authors = ["Naveen Thurimerla <nawinto99@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
