[tool.poetry]
name = "watsoap"
version = "1.0.0"
description = "WATSOAP (What's The Status Of API) is a API health-checking monitoring tool"
authors = ["Naveen Thurimerla <nawinto99@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
pandas = "^1.4.3"
PyYAML = "^6.0"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
pylint = "^2.14.5"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
