[tool.poetry]
name = "watsoap"
version = "1.0.0"
description = "WATSOAP (What's The Status Of API) is a API health-checking monitoring tool"
authors = ["Naveen Thurimerla <nawinto99@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
pandas = "^1.4.3"
PyYAML = "^6.0"
python-dotenv = "^0.20.0"
mkdocs-include-markdown-plugin = {version = "^3.6.1", optional = true}
mkdocs-material = {version = "^8.4.0", optional = true}
mkdocs-material-extensions = {version = "^1.0.3", optional = true}
mkdocstrings = {version = "^0.19.0", optional = true}
mkdocs-autorefs = {version = "^0.4.1", optional = true}
mkdocs = {version = "^1.3.1", optional = true}

[tool.poetry.extras]
doc = ["mkdocs", "mkdocs-include-markdown-plugin", "mkdocs-material", "mkdocstrings", "mkdocs-material-extensions", "mkdocs-autorefs"]

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
pylint = "^2.14.5"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/nawinto99/watsoap/issues"
